openshift/overlays/infra-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhdp-flow
  labels:
    app.kubernetes.io/name: rhdp-flow
    app.kubernetes.io/part-of: rhdp-flow
    environment: dev
